ocr and pdf api's
