# app.py
@@ -1,6 +1,7 @@
+from io import BytesIO
+from PyPDF2 import PdfReader
 from flask import Flask, request, jsonify,session
 from flask_swagger_ui import get_swaggerui_blueprint
-from flask_swagger import swagger
 from pymongo import MongoClient
 from flask_cors import CORS
 import os
@@ -11,12 +12,10 @@ import numpy as np
 from dotenv import load_dotenv
 import secrets
 from langchain.chains import ConversationalRetrievalChain
-from langchain.text_splitter import RecursiveCharacterTextSplitter
+from langchain.text_splitter import RecursiveCharacterTextSplitter,CharacterTextSplitter
 from langchain.llms import OpenAI
 import boto3
 from langchain.embeddings import OpenAIEmbeddings
-from io import BytesIO
-from PyPDF2 import PdfReader
 from langchain.vectorstores import FAISS
 
 
@@ -28,24 +27,25 @@ app.secret_key = "123"
 
 os.environ["OPENAI_API_KEY"] =os.getenv("OPEN_API_KEY")
 
-ocr = PaddleOCR(use_angle_cls=True,use_gpu=False, lang='en')
+ocr = PaddleOCR(use_angle_cls=True,use_gpu=False, lang='en', page_num=1)
 
 embeddings = OpenAIEmbeddings()
 
 chat_history = []
 
-client = MongoClient(host="localhost",port=27017)
+mongo_uri = "mongodb+srv://mohankumarap:cUZeitXYtc8xJadE@scanflow-pdf.azxtckw.mongodb.net/"
+client = MongoClient(mongo_uri)
 db = client['qa']
 files=db['files']
 history = db['conversations']
 users = db ['users']
 
 s3 = boto3.client('s3',
-                    aws_access_key_id="AKIA4SSHERTEX2UZYAES",
-                    aws_secret_access_key= "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",
+                    aws_access_key_id="AKIAW7R5LXKH3LVNOOSX",
+                    aws_secret_access_key= "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",
                      )
 
-BUCKET_NAME='pdfocrflask'
+BUCKET_NAME='scanflowpdf'
 
 @app.route('/', methods=['GET'])
 def home():
@@ -62,7 +62,7 @@ def register():
         if existing_user:
             return jsonify({'message': 'Username already exists'}), 400
 
-        users.insert_one({'username': user_name, 'password': password})
+        db.users.insert_one({'username': user_name, 'password': password})
 
         return jsonify({'message': 'User registered successfully', 'username': user_name}), 200
     else:
@@ -78,15 +78,31 @@ def login():
         user = users.find_one({'username': user_name, 'password': password})
         if user:
             session['user_id'] = user['username']
-            print(session['user_id'])
-            return jsonify({'message': 'Login successful', 'username': str(user['username'])}), 200
+            return jsonify({'message': 'Login successful'}), 200
         else:
             return jsonify({'message': 'Invalid username or password'}), 401
     else:
         return jsonify({'message': 'Missing username or password'}), 400
     
-@app.route("/upload_file", methods=["POST"])
-def process_request():
+@app.route('/files', methods=['GET'])
+def files():
+    try:
+        user_id = session.get('user_id')
+        files = db.files.find({'user_id': user_id})
+        file_list = []
+        for file in files:
+            file_list.append({'file_name': file['file_name'], 'file_id': file['file_id']})
+
+        if file_list:
+            return jsonify({'files': file_list}), 200
+        else:
+            return jsonify({'message': 'No files available'}), 200
+    except Exception as e:
+        return jsonify({'error': str(e)}), 500
+
+    
+@app.route("/upload_file-ocr", methods=["POST"])
+def process_request_ocr():
     global docsearch, uploaded_pdf_data
     try:
         pdf_file = request.files["pdf"]
@@ -100,23 +116,14 @@ def process_request():
             pdf_path = temp_pdf.name
 
         session['file_id'] = secrets.token_hex(16)
+        user_id = session.get('user_id')
         file_id = session['file_id']
-        db.files.insert_one({'file_id': file_id, 'file_name': uploaded_file_name})
-        pdf_reader = PdfReader(BytesIO(uploaded_pdf_data))
-        raw_text = ""
-        extracted_text = []
-        for page_num in range(len(pdf_reader.pages)):
-            with tempfile.TemporaryDirectory() as temp_dir:
-                images = convert_from_path(pdf_path, output_folder=temp_dir, first_page=page_num+1, last_page=page_num+1)
-                image = np.array(images[0])
-                result = ocr.ocr(image, cls=True)
-                for idx in range(len(result)):
-                    res = result[idx]
-                    for line in res:
-                        content = line[1][0]
-                        content = content.replace("'", "")
-                        extracted_text.append(content)
+        db.files.insert_one({'user_id':user_id,'file_id': file_id, 'file_name': uploaded_file_name})
+
+        images = convert_from_path(pdf_path)
+        extracted_text = extract_text_from_images(images)
         raw_text = ' '.join(extracted_text)
+        print(raw_text)
         with tempfile.NamedTemporaryFile(suffix=".txt", delete=False) as temp_file:
             temp_file.write(raw_text.encode())
             pdf_path = temp_file.name
@@ -137,6 +144,57 @@ def process_request():
     except Exception as e:
         return jsonify({'error': str(e)}), 400
 
+def extract_text_from_images(images):
+    extracted_text = []
+    for image in images:
+        result = ocr.ocr(np.array(image), cls=True)
+        for idx in range(len(result)):
+            res = result[idx]
+            for line in res:
+                content = line[1][0]
+                content = content.replace("'", "")
+                extracted_text.append(content)
+    return extracted_text  
+
+@app.route("/upload_file", methods=["POST"])
+def process_request():
+    global docsearch, uploaded_pdf_data
+    try:
+        pdf_file = request.files["pdf"]
+        uploaded_file_name = pdf_file.filename
+        uploaded_pdf_data = pdf_file.read()
+        if not uploaded_pdf_data:
+            return jsonify({'error': 'Empty file'}),404
+        session['file_id'] = secrets.token_hex(16)
+        user_id = session.get('user_id')
+        file_id = session['file_id']
+        db.files.insert_one({'user_id':user_id,'file_id': file_id, 'file_name': uploaded_file_name})
+        reader = PdfReader(BytesIO(uploaded_pdf_data))
+        raw_text = ""
+        for page in reader.pages:
+            text = page.extract_text()
+            if text:
+                raw_text += text 
+        print(raw_text)
+        with tempfile.NamedTemporaryFile(suffix=".txt", delete=False) as temp_file:
+            temp_file.write(raw_text.encode())
+        uploaded_file = uploaded_file_name.replace('.pdf', '') + '.txt'
+        s3.upload_file(
+            Bucket=BUCKET_NAME,
+            Filename=temp_file.name,
+            Key=uploaded_file
+        )
+        splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=20)
+        texts = splitter.create_documents([raw_text])
+        docsearch = FAISS.from_documents(texts, embeddings)
+        docsearch.save_local(f"{file_id}")
+
+        return jsonify({'message': 'File uploaded successfully',
+                        'file_name': '{}'.format(uploaded_file_name), 'file_id': '{}'.format(file_id)}), 200
+
+    except Exception as e:
+        return jsonify({'error': str(e)}), 400
+        
 
 @app.route("/question/<string:file_id>", methods=["POST"])
 def question_request(file_id):
